# rviz_vive_plugin

./: CMakeLists.txt  README.md  package.xml  plugin_description.xml  runtime_setup.sh
cmake/: FindSDL2.cmake
src/: comp.compositor  distortion.frag  mat.material  vive_display.cpp  vive_display.h  vive_driver.cpp  vive_driver.h  vive_openvr.cpp  vive_openvr.h  vive_serverdriverhost.cpp  vive_serverdriverhost.h
src/shared/: linuxcompathack.h  pathtools.cpp  pathtools.h
