<?xml version="1.0"?>
<package>
  <name>rviz_vive_plugin</name>
  <version>0.0.0</version>
  <description>The rviz_vive_plugin package</description>
  <maintainer email="agilerson@imr.rwth-aachen.de">Andre Gilerson</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  
  <build_depend>libogre-dev</build_depend>
  <run_depend>libogre-dev</run_depend>

  <build_depend>libqt4-dev</build_depend>
  <run_depend>libqt4-dev</run_depend>

  <build_depend>libqt4-opengl-dev</build_depend>
  <run_depend>libqt4-opengl-dev</run_depend>

  <build_depend>boost</build_depend>
  <run_depend>boost</run_depend>

  <build_depend>rviz</build_depend>
  <run_depend>rviz</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
     <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
